# Sign-Language-Translation

./: .gitignore  CLAUDE.md  LICENSE  README.md  feature_extraction.ipynb  main_gemini.py  pyproject.toml  run_pipeline.sh  run_pipeline_cnn_transformer.sh  run_pipeline_vqvae_seq2seq.sh
Claude_Code/: feature_extraction_v2.py  features.md  main_claude.py
data/WLASL_Landmarks/: sign_to_prediction_index_map.json  train.csv
docs/: CLAUDE.md  EXPERIMENT_LOG.md  TRAINING_PIPELINE.md  competition_info.md
notebooks/classification/: asl-improved-transformer-v2.ipynb  asl-transformers-yes-face.ipynb  sign-token-classifier.ipynb
notebooks/experiments/: asl-landmark-attention-transformer.ipynb  asl-multistream-tcn-transformer.ipynb  data_playground.ipynb  feature_extraction.ipynb  pilot.ipynb
notebooks/preprocessing/: preprocess-wlasl-mediapipe.ipynb
notebooks/tools/: create-asl-lmdb.ipynb  create-fs-lmdb.ipynb  create-is-lmdb.ipynb
notebooks/vqvae/: sign-vqvae-pretraining.ipynb  sign-vqvae-temporal.ipynb
notebooks/vqvae_training/: train_translator_standalone.py  train_vqvae_standalone.py
research/feature_engineering/: motion_features_v1.py  wrist_motion_v0.py
research/legacy_models/: main_entry_old.py
research/legacy_models/autoencoders/: asl_ae_v1.py
research/legacy_models/gcn/: graph_structure.py  st_gcn_layers.py  st_gcn_model.py  st_gcn_training.py
research/legacy_models/lstm/: lstm_training_v1.py
research/legacy_models/transformers/: asl_improved_models.py  cnn_transformer_draft.py  cnn_transformers.py  data_prep.py  data_prep_face.py  improved_cnn_transformer.py  transformers.py
research/models/cnn_transformer/: __init__.py  config.py  pretrain_fingerspelling.py  train.py
research/models/cnn_transformer/data/: __init__.py  _cache_keys.py  augmentation.py  build_fingerspelling_lmdb.py  build_lmdb.py  dataset.py  fingerspelling_dataset.py  (+1 more)
research/models/st_gcn/: data_prep.py  graph_structure.py  st_gcn_layers.py  st_gcn_model.py  st_gcn_training.py
research/prototypes/: convert_fingerspelling.py  preprocess_wlasl.py  token_classifier_prototype.py  vqvae_temporal_prototype.py
research/tools/: build_asl_lmdb_kaggle.py  build_fingerspelling_lmdb_kaggle.py  convert_fingerspelling.py  data_playground.py  merge_datasets.py  parquet_to_csv.py  preprocess_landmarks.py  preprocess_msasl.py  visualize_landmarks.py
vqvae_seq2seq/data/: dataset.py  preprocessing.py  signer_split.py
vqvae_seq2seq/scripts/: precompute_tokens.py
vqvae_seq2seq/translation/: config.py  conformer.py  decoder.py  train_translator.py
vqvae_seq2seq/vqvae/: __init__.py  augmentation.py  config.py  cross_attention.py  normalization.py  train_vqvae.py  vector_quantizer.py  vqvae_model.py
(+21 files in other folders)
