[project]
name = "isolated-sign-language-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "kaggle>=1.8.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "lmdb>=1.6.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
]

[project.optional-dependencies]
preprocess = [
    "mediapipe>=0.10",
    "opencv-python-headless>=4.8",
]
