[project]
name = "isolated-sign-language-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "kaggle>=1.8.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "lmdb>=1.6.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Minimal install for building the LMDB cache on a CPU-only pod.
# torch is needed for torch.save/load serialization in build_lmdb.py.
# Install CPU-only torch to save ~1.5 GB of disk vs the CUDA wheel:
#   uv pip install -e ".[lmdb-build]" --index-url https://download.pytorch.org/whl/cpu
lmdb-build = [
    "lmdb>=1.6.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "torch>=2.9.1",
]
preprocess = [
    "mediapipe>=0.10",
    "opencv-python-headless>=4.8",
]
